--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="vibrate">Vibrate</string>
     <string name="digits_colon">Digits:</string>
+    <string name="on_screen_keyboard">\"On Screen\" Keyboard</string>
 </resources>
