--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="restart">restart</string>
     <string name="three_point" translatable="false">3.</string>
     <string name="lets_see_what_you_can_do">Let\'s see what you can do!</string>
+    <string name="errors_colon">Errors:</string>
+    <string name="percentage_colon">Percentage:</string>
 </resources>
