--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="open_drawer">Open navigation drawer</string>
     <string name="close_drawer">Close Navigation Drawer</string>
     <string name="practise">Practise</string>
+    <string name="reference">Reference</string>
 </resources>
