Some improvements involving the various numbers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="close_drawer">Close Navigation Drawer</string>
     <string name="practise">Practise</string>
     <string name="reference">Reference</string>
+    <string name="number_option_dialog_title">Select the number to practise</string>
 </resources>
