--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="practise">Practise</string>
     <string name="reference">Reference</string>
     <string name="number_option_dialog_title">Select the number to practise</string>
+    <string name="settings">Settings</string>
+    <string name="text_size">Text size</string>
+    <string name="spacings">Spacings</string>
 </resources>
