--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
     <string name="settings">Settings</string>
     <string name="text_size">Text size</string>
     <string name="spacings">Spacings</string>
+    <string name="number_of_digits_given">Number of digits given</string>
+    <string name="range">Range</string>
+    <string name="next">next</string>
+    <string name="complete_the_statement">Complete the statement</string>
 </resources>
