--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,19 @@
         <item>Pi</item>
         <item>Tau</item>
         <item>Euler\'s number</item>
+        <item>Square root of 2</item>
     </string-array>
     <string-array name="trainers">
         <item>Pi Trainer</item>
         <item>Tau Trainer</item>
         <item>Euler\'s Trainer</item>
+        <item>Square Root Trainer</item>
     </string-array>
+
+    <string name="pi">Pi</string>
+    <string name="tau">Tau</string>
+    <string name="euler_number">Euler\'s number</string>
+    <string name="sqrt2">Square root of 2</string>
 
     <string name="restart">restart</string>
     <string name="lets_see_what_you_can_do">Let\'s see what you can do!</string>
