--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="sure_delete_digits">Are you sure you want to delete this number?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="golden_ratio">Golden Ratio</string>
+    <string name="timed_mode_game">Time mode</string>
 </resources>
