Improve TimeFragment's digit counter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="no">No</string>
     <string name="golden_ratio">Golden Ratio</string>
     <string name="timed_mode_game">Time mode</string>
+    <string name="digits_colon_format">Digits: %d</string>
 </resources>
