Create list of records

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,7 @@
     <string name="golden_ratio">Golden Ratio</string>
     <string name="timed_mode_game">Time mode</string>
     <string name="digits_colon_format">Digits: %d</string>
+    <string name="sort_by_spinner_text">Sort by:</string>
+    <string name="num_of_digits_record_format">Number of digits: %s</string>
+    <string name="digits_per_minute_record_format">Digits per minute: %.2f</string>
 </resources>
