--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,6 @@
     <string name="check_your_settings">Something is wrong in your settings</string>
     <string name="length_of_answer">Length of answer</string>
     <string name="title_activity_numbers">Custom Numbers</string>
-    <string name="action_settings">Settings</string>
     <string name="custom_numbers">Custom numbers…</string>
     <string name="create">Create</string>
     <string name="no_custom_numbers">You have not added any numbers yet.</string>
@@ -46,11 +45,12 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="golden_ratio">Golden Ratio</string>
-    <string name="timed_mode_game">Time mode</string>
+    <string name="timed_mode_game">Timed mode</string>
     <string name="digits_colon_format">Digits: %d</string>
     <string name="sort_by_spinner_text">Sort by:</string>
     <string name="num_of_digits_record_format">Number of digits: %s</string>
     <string name="digits_per_minute_record_format">Digits per minute: %.2f</string>
+    <string name="try_again">Try again</string>
 
     <string-array name="sort_methods">
         <item>Digits per minute</item>
