--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="sort_by_spinner_text">Sort by:</string>
     <string name="record_card_description" formatted="false">%d digits at %.2f digits per minute"</string>
     <string name="try_again">Try again</string>
+    <string name="record_holder_name">Name</string>
 
     <string-array name="sort_methods">
         <item>Digits per minute</item>
