Add high score and done button to TimeFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,9 @@
     <string name="try_again">Try again</string>
     <string name="record_holder_name">Name</string>
     <string name="do_not_save_record">Don\'t save</string>
+    <string name="highscores">Highscores</string>
+    <string name="done">Done</string>
+    <string name="please_type_more_digits_snackbar">Please type more digits</string>
 
     <string-array name="sort_methods">
         <item>Digits per minute</item>
