--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -46,4 +46,20 @@
     <string name="sure_delete_digits">Weet je zeker dat je dit getal wil verwijderen?</string>
     <string name="title_activity_numbers">Eigen getallen</string>
     <string name="yes">Ja</string>
+    <string name="digits_colon_format" formatted="false">Cijfers: %d</string>
+    <string name="do_not_save_record">Niet opslaan</string>
+    <string name="done">Klaar</string>
+    <string name="highscores">High scores</string>
+    <string name="please_type_more_digits_snackbar">Vul meer cijfers in</string>
+    <string name="record_card_description" formatted="false">%d cijfers met %.2f cijfers per minuut</string>
+    <string name="record_holder_name">Naam</string>
+    <string name="sort_by_spinner_text">Sorteren op:</string>
+    <string name="timed_mode_game">Getimede modus</string>
+    <string name="try_again">Probeer opnieuw</string>
+    <string name="please_provide_a_fractional_part">Verstrek een fractioneel deel</string>
+    <string name="please_provide_a_name">Verstrek een naam</string>
+    <string name="please_provide_an_integer_part">Verstrek een integer deel</string>
+    <string name="record_dialog_message_format" formatted="false">Je typte %d cijfers in %.1f seconden.</string>
+    <string name="save_error_message">Er ging iets mis tijdens het opslaan.</string>
+    <string name="there_is_already_a_number_with_that_name">Er is al een getal met die naam.</string>
 </resources>
