--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,10 @@
     <string name="there_is_already_a_number_with_that_name">There is already a number with that name</string>
     <string name="save_error_message">Something went wrong while saving</string>
     <string name="record_dialog_message_format" formatted="false">You typed %d digits in %.1f seconds.</string>
+    <string name="infinite_series">Infinite series</string>
+    <string name="click_start">Click start</string>
+    <string name="n_textView_format">…+1/%d…</string>
+    <string name="learn_more">Learn more</string>
 
     <string-array name="sort_methods">
         <item>Digits per minute</item>
