--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,10 +61,13 @@
     <string name="there_is_already_a_number_with_that_name">There is already a number with that name</string>
     <string name="save_error_message">Something went wrong while saving</string>
     <string name="record_dialog_message_format" formatted="false">You typed %d digits in %.1f seconds.</string>
-    <string name="infinite_series">Infinite series</string>
+    <string name="infinite_series">Leibniz infinite series</string>
     <string name="click_start">Click start</string>
     <string name="n_textView_format">…+1/%d…</string>
     <string name="learn_more">Learn more</string>
+    <string name="ok">OK</string>
+    <string name="infinite_series_disclaimer_title">Welcome!</string>
+    <string name="infinite_series_disclaimer_message">Here, you can let your device calculate the digits of π, using the infinite series by Leibniz. For more info on the formula, click the info-icon in the toolbar. I will improve this feature soon, and I will also add more infinite series!</string>
 
     <string-array name="sort_methods">
         <item>Digits per minute</item>
