--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -49,7 +49,7 @@
     <string name="digits_colon_format" formatted="false">Cijfers: %d</string>
     <string name="do_not_save_record">Niet opslaan</string>
     <string name="done">Klaar</string>
-    <string name="highscores">High scores</string>
+    <string name="high_scores">High scores</string>
     <string name="please_type_more_digits_snackbar">Vul meer cijfers in</string>
     <string name="record_card_description" formatted="false">%d cijfers met %.2f cijfers per minuut</string>
     <string name="record_holder_name">Naam</string>
@@ -62,4 +62,11 @@
     <string name="record_dialog_message_format" formatted="false">Je typte %d cijfers in %.1f seconden.</string>
     <string name="save_error_message">Er ging iets mis tijdens het opslaan.</string>
     <string name="there_is_already_a_number_with_that_name">Er is al een getal met die naam.</string>
+    <string name="click_start">Druk op start</string>
+    <string name="infinite_series">Leibniz oneindige reeks</string>
+    <string name="infinite_series_disclaimer_message">Hier kan je je apparaat π uit laten rekenen, met de oneindige reeks van Leibniz. Klik voor meer informatie over de formule op het info-icoontje in de toolbar. Ik zal deze feature gauw verbeteren en ik zal ook meer oneindige reeksen toevoegen.</string>
+    <string name="infinite_series_disclaimer_title">Welkom!</string>
+    <string name="learn_more">Meer informatie</string>
+    <string name="n_textView_format">…+1/%d…</string>
+    <string name="ok">OK</string>
 </resources>
