--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -63,7 +63,7 @@
     <string name="save_error_message">Er ging iets mis tijdens het opslaan.</string>
     <string name="there_is_already_a_number_with_that_name">Er is al een getal met die naam.</string>
     <string name="click_start">Druk op start</string>
-    <string name="infinite_series">Leibniz oneindige reeks</string>
+    <string name="gregory_leibniz_series">Leibniz oneindige reeks</string>
     <string name="infinite_series_disclaimer_message">Hier kan je je apparaat π uit laten rekenen, met de oneindige reeks van Leibniz. Klik voor meer informatie over de formule op het info-icoontje in de toolbar. Ik zal deze feature gauw verbeteren en ik zal ook meer oneindige reeksen toevoegen.</string>
     <string name="infinite_series_disclaimer_title">Welkom!</string>
     <string name="learn_more">Meer informatie</string>
