Make height of keyboard properly adaptable
Keyboard is now not TableLayout but nested LinearLayouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="keyboard_size_save_or_discard">Save or discard?</string>
     <string name="keyboard_size_smallest">Smallest</string>
     <string name="keyboard_size_largest">Largest</string>
+    <string name="xs_backspace">backspace</string>
 
     <string-array name="sort_methods">
         <item>Digits per minute</item>
