--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="save_error_message">Something went wrong while saving</string>
     <string name="record_dialog_message_format" formatted="false">You typed %d digits in %.1f seconds.</string>
     <string name="choose_keyboard_layout">Choose keyboard layout</string>
+    <string name="keyboard_layout_ellipsis">Keyboard layout…</string>
     <string name="gregory_leibniz_series">Gregory-Leibniz series</string>
     <string name="click_start">Click start</string>
     <string name="n_textView_format">…+1/%d…</string>
@@ -74,7 +75,6 @@
     <string name="keyboard_size_ellipsis">Keyboard size…</string>
     <string name="keyboard_width_format" formatted="false">Keyboard width: %s</string>
     <string name="keyboard_height_format" formatted="false">Keyboard height: %s</string>
-    <string name="keyboard_size_wrap_content">lowest</string>
     <string name="keyboard_size_save">Save</string>
     <string name="keyboard_size_discard">Discard</string>
     <string name="keyboard_size_save_or_discard">Save or discard?</string>
