Show warning when keyboard width is set to match_parent

--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -94,4 +94,6 @@
     <string name="keyboard_size_smallest">Kleinst</string>
     <string name="keyboard_width_format">Hoogte toetsenbord: %s</string>
     <string name="xs_backspace">backspace</string>
+    <string name="keyboard_width_warning_message">De breedte op Grootst zetten werkt niet met landscape</string>
+    <string name="warning">Waarschuwing</string>
 </resources>
