--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,8 @@
     <string name="keyboard_size_smallest">Smallest</string>
     <string name="keyboard_size_largest">Largest</string>
     <string name="xs_backspace">backspace</string>
+    <string name="warning">Warning</string>
+    <string name="keyboard_width_warning_message">Setting the width to Largest won\'t work with landscape</string>
 
     <string-array name="sort_methods">
         <item>Digits per minute</item>
