--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
     <string name="reference">Reference</string>
     <string name="number_option_dialog_title">Select the number to practise</string>
     <string name="settings">Settings</string>
-    <string name="text_size">Text size</string>
-    <string name="spacings">Spacings</string>
+    <string name="text_size_colon">Text size: %d</string>
+    <string name="spacings">Spacing</string>
     <string name="number_of_digits_given">Number of digits given</string>
     <string name="range">Range</string>
     <string name="next">next</string>
