--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="settings">Settings</string>
     <string name="text_size_colon">Text size: %d</string>
     <string name="spacings">Spacing</string>
-    <string name="number_of_digits_given">Number of digits given</string>
+    <string name="number_of_digits_given_colon">Number of digits given: %d</string>
     <string name="range">Range</string>
     <string name="next">next</string>
     <string name="complete_the_statement">Complete</string>
@@ -34,7 +34,7 @@
     <string name="save">Save</string>
     <string name="too_much_input_dialog_message">Great work! You have reached the maximum amount of digits of the number.</string>
     <string name="check_your_settings">Something is wrong in your settings</string>
-    <string name="length_of_answer">Length of answer</string>
+    <string name="length_of_answer_colon">Length of answer: %d</string>
     <string name="title_activity_numbers">Custom Numbers</string>
     <string name="custom_numbers">Custom numbers…</string>
     <string name="create">Create</string>
@@ -84,6 +84,11 @@
     <string name="keyboard_width_warning_message">Setting the width to Largest won\'t work with landscape</string>
     <string name="keyboard_feedback">Keyboard feedback</string>
     <string name="close_settings_xs">Close settings</string>
+    <string name="range_start">Range start</string>
+    <string name="range_stop">Range stop</string>
+    <string name="error_message_invalid_integer">Invalid integer</string>
+    <string name="error_message_too_large">Too large</string>
+    <string name="error_message_too_small">Too small</string>
 
     <string-array name="sort_methods">
         <item>Digits per minute</item>
